--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
     />
     <title>Pagination</title>
+    <script src="https://raw.githubusercontent.com/rvsp/zen-suite-cdn/main/bundle.js"></script>
   </head>
   <body>
     <div class="container">
