--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
   </head>
   <body>
-    <script src="https://raw.githubusercontent.com/rvsp/zen-suite-cdn/main/bundle.js"></script>
+    <script src="https://app.zenclass.in/sheets/v1/js/zen/suite/bundle.js"></script>
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
