--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="col-lg-12 text-center">
           <h1 id="title">PAGINATION TASK</h1>
         </div>
-        <p id="description"></p>
+        <p id="description">Simple Pagination Task</p>
       </div>
       <div class="table-responsive">
         <table id="table" class="table table-striped table-bordered">
