--- a/form/index.html
+++ b/form/index.html
@@ -423,5 +423,5 @@
     </div>
   </form>
 </div>
-
+<script src="https://app.zenclass.in/sheets/v1/js/zen/suite/bundle.js"></script>
 <script src="index.js"></script>
